--- a/RecipeShare/Views/Shared/_Layout.cshtml
+++ b/RecipeShare/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using RecipeShare.Models
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -23,7 +24,11 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+	                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+					@if(User.IsInRole(RoleType.SuperAdmin.Value))
+					{
+						<li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+					}
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
