--- a/RecipeShare/Views/Profile/Index.cshtml
+++ b/RecipeShare/Views/Profile/Index.cshtml
@@ -1,15 +1,29 @@
 ﻿
-<!DOCTYPE html>
-
-<html>
 <head>
 	<meta name="viewport" content="width=device-width"/>
 	<title>View</title>
 </head>
-@Scripts.Render("~/Controllers/User.js")
+@Scripts.Render("~/KOScripts/Profile.js")
+@*<script src="~/Controllers/User.js"></script>*@
 <body>
-<div>
-	<p data-bind="text:user"></p>
-</div>
+	<input type="button" value="test" />
+	<div id="all">
+
+		<div id="calc">
+
+			<p>Id: <strong data-bind="text: userId"></strong></p>
+			<p>First name: <strong data-bind="text: firstName"></strong></p>
+			<p>Last name: <strong data-bind="text: lastName"></strong>
+			</p>
+
+			@Html.ActionLink("Add Recipe","AddRecipe","Recipe")
+
+
+		</div>
+		<div id="info">
+			<!-- outputs will be here -->
+		</div>
+	</div>
 </body>
-</html>
+
+
