--- a/RecipeShare/Views/Recipe/AddRecipe.cshtml
+++ b/RecipeShare/Views/Recipe/AddRecipe.cshtml
@@ -7,10 +7,5 @@
 
 <body>
 
-<select data-bind="
-          options: foods,
-          optionsText: 'name',
-          optionsValue: 'id'"></select>
-<input type="text" data-bind="text:test"/>
-	<input type="button" data-bind="click:alert"/>
+<input id ="foodSearch" type="text" class="form-control"/>
 </body>
