--- a/RecipeShare/Views/Recipe/AddRecipe.cshtml
+++ b/RecipeShare/Views/Recipe/AddRecipe.cshtml
@@ -8,23 +8,54 @@
 <body>
 	<h3>Editing Recipe <strong data-bind="text:name"></strong>
 	</h3>
-	<div class="form-group">
-		<label>Name:</label>
-		<input type="text" class="form-control" data-bind="textInput: name"/>
+	<div class=" col-md-4">
+		<div class="form-group">
+			<label>Name:</label>
+			<input type="text" class="form-control" data-bind="textInput: name"/>
+		</div>
+		<div class="form-group">
+			<label>Category:</label>
+			<select class="form-control" data-bind="options: recipeCategories, optionsText: 'recipeCategory'"></select>
+		</div>
+		<div class="form-group">
+			<label>Serves:</label>
+			<input type="text" class="form-control" data-bind="textInput: serves"/>
+		</div>
 	</div>
-	<div class="form-group">
-		<label>Category:</label>
-		<select class="form-control" data-bind = "options: recipeCategories, optionsText: 'recipeCategory'"></select>
+	<div class=" col-md-4">
+		<div class="form-group">
+			<label>Prep Time:</label>
+			<input type="text" class="form-control" data-bind="textInput: prepTime"/>
+		</div>
+		<div class="form-group">
+			<label>Cook Time:</label>
+			<input type="text" class="form-control" data-bind="textInput: cookTime"/>
+		</div>
 	</div>
-	<div class="form-group">
-		<label>Serves:</label>
-		<input type="text" class="form-control" data-bind="textInput: serves"/>
+	<br/>
+	<table>
+		<tbody data-bind="foreach: ingredients">
+			<tr>
+				<td>
+					<input data-bind='value: food' />
+				</td>
+				<td>
+					<strong data-bind='text: amount'></strong>
+				</td>
+			</tr>
+		</tbody>
+		
+	</table>
+	<div class="col-md-12">
+		<div class="form-group">
+			<label>Food:</label>
+			<input id="foodSearch" type="text" class="form-control" data-bind="text:food"/>
+		</div>
+		<div class="form-group">
+			<label>Amount:</label>
+			<input class="form-control" type="text" data-bind="text:amount"/>
+		</div>
+		<input type="button" class="btn btn-green" value ="Add" data-bind="click:addIngredient"/>
 	</div>
-	<div class="form-group">
-		<label>Serves:</label>
-		<input type="text" class="form-control" data-bind="textInput: serves" />
-	</div>
-	
-	<input id="foodSearch" type="text" class="form-control"/>
-	<select class = "form-control" data-bind="options: foodGroups, optionsText: 'foodGroup', optionsValue: foodGroupId"></select>
+	<div class="clearfix"></div>
 </body>
