--- a/RecipeShare/Views/Recipe/AddRecipe.cshtml
+++ b/RecipeShare/Views/Recipe/AddRecipe.cshtml
@@ -37,10 +37,10 @@
 		<tbody data-bind="foreach: ingredients">
 			<tr>
 				<td>
-					<input data-bind='value: food' />
+					<input data-bind='value:food' />
 				</td>
 				<td>
-					<strong data-bind='text: amount'></strong>
+					<strong data-bind='text:amount'></strong>
 				</td>
 			</tr>
 		</tbody>
@@ -49,11 +49,11 @@
 	<div class="col-md-12">
 		<div class="form-group">
 			<label>Food:</label>
-			<input id="foodSearch" type="text" class="form-control" data-bind="text:food"/>
+			<input id="foodSearch" type="text" class="form-control" data-bind="textInput:food" />
 		</div>
 		<div class="form-group">
 			<label>Amount:</label>
-			<input class="form-control" type="text" data-bind="text:amount"/>
+			<input class="form-control" type="text" data-bind="textInput:amount" />
 		</div>
 		<input type="button" class="btn btn-green" value ="Add" data-bind="click:addIngredient"/>
 	</div>
