--- a/RecipeShare/Views/Recipe/AddRecipe.cshtml
+++ b/RecipeShare/Views/Recipe/AddRecipe.cshtml
@@ -51,30 +51,33 @@
 	<div class="col-md-6">
 		<ul class="list-group" data-bind="foreach: ingredients">
 			<li class=" list-group-item" data-bind="click:$parent.removeIngredient">
-				<h4 class ="" data-bind="text:formated"></h4>
+				<h4 class="" data-bind="text:formated"></h4>
 				@*<a href="#" class="btn btn-red pull-right" data-bind="click:$parent.removeIngredient">Remove</a>*@
 			</li>
 
 		</ul>
 	</div>
-		@*<ul class="list-group" data-bind="foreach: ingredients">
-			<li data-bind="text:formated">
-				
-			</li>
-		</ul>*@
-	
-	@*<table>
-		<tbody data-bind="foreach: ingredients">
-			<tr>
-				<td>
-					<strong class data-bind='value:food'></strong>
-				</td>
-				<td>
-					<strong class =" form-control" data-bind='text:amount'></strong>
-				</td>
-			</tr>
-		</tbody>
 
-	</table>*@
+	<div class="col-md-12">
+		<div class="well">
+			<div class="form-inline">
+				<label>Instruction:</label>
+				<input type="text" class="form-control" data-bind="textInput:step"/>
+				<a href="#" class="btn btn-green" data-bind="click:addStep">
+					<i class="fa fa-lg fa-plus"></i>
+				</a>
+				@*<input type="button" class="btn btn-green" data-bind="click:addIngredient" />*@
+			</div>
+		</div>
+	</div>
+	<div class="col-md-6">
+		<ul class="list-group" data-bind="foreach: steps">
+			<li class=" list-group-item" data-bind="click:$parent.removeStep">
+				<span data-bind="text:$index">.</span><span class="" data-bind="text:narrative"></span>
+				@*<a href="#" class="btn btn-red pull-right" data-bind="click:$parent.removeIngredient">Remove</a>*@
+			</li>
+
+		</ul>
+	</div>
 	<div class="clearfix"></div>
 </body>
