ko validate, misc things

--- a/RecipeShare/Views/Recipe/AddRecipe.cshtml
+++ b/RecipeShare/Views/Recipe/AddRecipe.cshtml
@@ -80,5 +80,6 @@
 
 		</ul>
 	</div>
+	<a href="#" class="btn btn-green" data-bind=" click:saveRecipe">save</a>
 	<div class="clearfix"></div>
 </body>
