--- a/RecipeShare/Views/Shared/_Layout.cshtml
+++ b/RecipeShare/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     @Scripts.Render("~/bundles/modernizr")
 	@Scripts.Render("~/bundles/jquery")
 	@Scripts.Render("~/bundles/bootstrap")
-	@Scripts.Render("~/Scripts/knockout-3.3.0.js")
+	@Scripts.Render("~/bundles/KO")
 	@RenderSection("scripts",required :false)
 
 </head>
