--- a/RecipeShare/Views/Shared/_Layout.cshtml
+++ b/RecipeShare/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
 	@Scripts.Render("~/bundles/jquery")
 	@Scripts.Render("~/bundles/bootstrap")
 	@Scripts.Render("~/bundles/KO")
+	@Scripts.Render("~/bundles/misc")
 	@RenderSection("scripts",required :false)
 
 </head>
