--- a/RecipeShare/Views/Recipe/AddRecipe.cshtml
+++ b/RecipeShare/Views/Recipe/AddRecipe.cshtml
@@ -71,7 +71,7 @@
 		</div>
 	</div>
 	<div class="col-md-6">
-		<ul class="list-group" data-bind="foreach: steps">
+		<ul class="list-group" data-bind="foreach: instructions">
 			<li class=" list-group-item" data-bind="click:$parent.removeStep">
 				<p>
 					<span data-bind="text:($index()+1)"></span><span>. </span><p class="" data-bind="text:narrative"></p>
