begin process of adding groups

--- a/RecipeShare/Views/Profile/Index.cshtml
+++ b/RecipeShare/Views/Profile/Index.cshtml
@@ -7,7 +7,9 @@
 @*<script src="~/Controllers/User.js"></script>*@
 <body>
 <h1>Profile for <span data-bind="text:fullName"></span></h1>
-	<a class ="btn btn-green "href='@Url.Action("AddRecipe", "Recipe")'>Add Recipe</a>
+	<a class="btn btn-green "href='@Url.Action("AddRecipe", "Recipe")'>Add Recipe</a>
+	<a class="btn btn-green " href='@Url.Action("AddEditGroups", "Group")'>Manage Groups</a>
+
 </body>
 
 
