--- a/RecipeShare/Views/Profile/Index.cshtml
+++ b/RecipeShare/Views/Profile/Index.cshtml
@@ -4,12 +4,15 @@
 	<title>View</title>
 </head>
 @Scripts.Render("~/KOScripts/Profile.js")
+@Scripts.Render("~/KOScripts/Recipe.js")
 @*<script src="~/Controllers/User.js"></script>*@
 <body>
 <h1>Profile for <span data-bind="text:fullName"></span></h1>
 	<a class="btn btn-green "href='@Url.Action("AddRecipe", "Recipe")'>Add Recipe</a>
 	<a class="btn btn-green " href='@Url.Action("AddEditGroups", "Group")'>Manage Groups</a>
-
+	<ul class="list-group" data-bind="foreach: recipes">
+		<li data-bind="text:Name"></li>
+	</ul>
 </body>
 
 
