you can edit recipes... kinda

--- a/RecipeShare/Views/Profile/Index.cshtml
+++ b/RecipeShare/Views/Profile/Index.cshtml
@@ -19,15 +19,19 @@
 			<th>Prep Time</th>
 			<th></th>
 		</tr>
-		<tr data-bind="foreach: recipes">
-			<td data-bind="text:Name"></td>
-			<td data-bind="text:RecipeCategory"></td>
-			<td data-bind="text:Serves"></td>
-			<td data-bind="text:CookTimeMinutes"></td>
-			<td data-bind="text:PrepTimeMinutes"></td>
-			<td><a data-bind="click:$parent.addEdit" href="#" class="fa fa-pencil fa-lg"></a>
-			<a href="#" class="fa fa-eye fa-lg"></a></td>
-		</tr>
+		<tbody data-bind="foreach: recipes">
+			<tr>
+				<td data-bind="text:Name"></td>
+				<td data-bind="text:RecipeCategory"></td>
+				<td data-bind="text:Serves"></td>
+				<td data-bind="text:CookTimeMinutes"></td>
+				<td data-bind="text:PrepTimeMinutes"></td>
+				<td>
+					<a data-bind="click:$parent.addEdit" href="#" class="fa fa-pencil fa-lg"></a>
+					<a href="#" class="fa fa-eye fa-lg"></a>
+				</td>
+			</tr>
+		</tbody>
 	</table>
 </body>
 
