--- a/RecipeShare/Views/Profile/Index.cshtml
+++ b/RecipeShare/Views/Profile/Index.cshtml
@@ -80,7 +80,7 @@
 								</tr>
 							</tbody>
 						</table>*@
-	<table style ="table" id="example">
+	<table id="example">
 		<thead>
 			<tr>
 				<th>Name</th>
