--- a/RecipeShare/Views/Home/Index.cshtml
+++ b/RecipeShare/Views/Home/Index.cshtml
@@ -3,13 +3,16 @@
 }
 @*@Scripts.Render("~/Controllers/User.js")*@
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+	<h1>Recipe Share</h1>
+	<br>
+	<p class="lead">Where sharing recipes is private and easy!</p>
+	<p><a href="@Url.Action("Register", "Account")" class="btn btn-primary btn-lg">Sign up &raquo;</a>
+	</p>
+	<span>Already a Member? Login <a href="@Url.Action("Login", "Account")">Here</a></span>
 </div>
 
 <div class="row">
-    <div class="col-md-4">
+    @*<div class="col-md-4">
         <h2>Getting started</h2>
         <p>
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
@@ -27,5 +30,5 @@
         <h2>Web Hosting</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+    </div>*@
 </div>
