--- a/RecipeShare/Views/Group/AddEditGroups.cshtml
+++ b/RecipeShare/Views/Group/AddEditGroups.cshtml
@@ -28,7 +28,7 @@
 		@*Add item: <input type="text" class="form-control " data-bind='value:memberToAdd, valueUpdate: "afterkeydown"'/>
 		<a href="#" class=" btn btn-green" type="submit" data-bind="enable: memberToAdd().length > 0, click:addMember">Add</a>*@
 
-		<p>Your values:</p>
+		<p>Users:</p>
 		<select class="form-control" multiple="multiple" height="5" data-bind="options:userEmails, selectedOptions:selectedItems"></select>
 
 		<div>
