--- a/RecipeShare/Views/Shared/_Layout.cshtml
+++ b/RecipeShare/Views/Shared/_Layout.cshtml
@@ -28,8 +28,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-	                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    @*<li>@Html.ActionLink("About", "About", "Home")</li>*@
+	                @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
 					@if(User.Identity.IsAuthenticated)
 					{
 						<li>@Html.ActionLink("Profile", "Index", "Profile")</li>
