--- a/RecipeShare/Views/Profile/Index.cshtml
+++ b/RecipeShare/Views/Profile/Index.cshtml
@@ -95,7 +95,7 @@
 			});
 			$.ajax({
 				type: "POST",
-				url: '/Profile/GetGroupsForUser',
+				url: '/Group/GetGroupsForUser',
 				contentType: "application/json; charset=utf-8",
 				dataType: "json",
 				success: function (data) {
