make add remove

--- a/RecipeShare/Views/Recipe/AddRecipe.cshtml
+++ b/RecipeShare/Views/Recipe/AddRecipe.cshtml
@@ -43,7 +43,7 @@
 			<label>Groups:</label>
 			<select multiple="multiple" id="groupsForRecipe" class="form-control" data-bind="options: groups, optionsText: 'Name', selectedOptions: chosenGroupsToRemove"></select>
 		</div>
-		<a href="#" class="btn btn-red" data-bind=" click:removeGroup">add</a>
+		<a href="#" class="btn btn-red" data-bind=" click:removeGroup">remove</a>
 		
 	</div>
 	<br/>
